# market-analysis-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analyst_agent/: .env.example  agent.py  config.py  utils.py
analyst_agent/agents/: __init__.py  report_generator.py  review_analyst.py  trend_analyzer.py
analyst_agent/prompts/: orchestrator.md  report_generator.md  review_analyst.md  trend_analyzer.md
analyst_agent/tools/: __init__.py  search.py  trends.py  types.py
tests/: conftest.py  test_market_analyst.py  test_review_analyst.py  test_search.py  test_trend_analyzer.py  test_trends.py  test_utils.py
